objects/Payee__c.object
<CustomObject>
    <fields>
        <fullName>CallidusStage__c</fullName>
        <label>CallidusStage</label>
        <referenceTo>CallidusStage__c</referenceTo>
        <relationshipLabel>Payees (CallidusStage)</relationshipLabel>
        <relationshipName>Payees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PayeeId__c</fullName>
        <label>PayeeId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayeeName__c</fullName>
        <label>PayeeName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SetNumber__c</fullName>
        <label>SetNumber</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Booking</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
                <value>
                    <fullName>Resubscribe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TransactionID__c</fullName>
        <description>Contains the AssetID which will be set from CaliidusStage__c Object</description>
        <label>TransactionID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
</CustomObject>